parser/tests/bad/decl01-5.st
% re-declaration of identifier 'x'
%   constant formal

procedure p(i: int, i: int)
  % empty
end p
